OLMIS-1807: Applied color scheme to alerts

--- a/src/main/webapp/common/icon.mixins.scss
+++ b/src/main/webapp/common/icon.mixins.scss
@@ -1,13 +1,11 @@
 @mixin icon($icon){
   @extend .fa;
   @extend ".fa-#{$icon} !optional";
+  font-family: $font-family;
   &::before{
+    font-family: "FontAwesome";
     display: inline-block;
     font-size: 1em;
-    width: 100%;
-    height: 100%;
-    line-height: 1.2em;
-    text-align: center;
   }
 }
 
