--- a/src/main/webapp/openlmis-table/tbody-title.scss
+++ b/src/main/webapp/openlmis-table/tbody-title.scss
@@ -81,7 +81,7 @@ Styleguide 4.3
 .openlmis-table > tbody > tr.title:first-child > td{
     margin: 0px;
     padding: 0px;
-    background-color: $brand-primary;
+    background-color: $link-color;
     color: $white;
     font-weight: bold;
     text-shadow: 0em 0em 1px $black;
