--- a/src/main/webapp/openlmis-form/form-filter.scss
+++ b/src/main/webapp/openlmis-form/form-filter.scss
@@ -1,44 +1,6 @@
 
-.form-filter{
-	display: flex;
-	align-items: flex-start;
-	.form-group{
-		flex: 0 0 auto;
-		margin-left: 1em;
-		&:first-child{
-			margin-left: 0em;
-		}
-	}
-	label, legend{
-		display: block;
-		float: none;
-		font-weight: bold;
-		font-size: $font-size-small;
-		line-height: 1em;
-		border-width: 0;
-		padding: 0.25em;
-		margin: 0.25em 0em;
-	}
-	label.checkbox,
-	label.radio{
-		font-weight: normal;
-		line-height: 1em;
-		font-size: $font-size-base;
-		padding-left: 1.7em;
-		margin-left: 0;
-		input[type="checkbox"],
-		input[type="radio"]{
-			display: block;
-			margin: 0;
-			top: 0.25em;
-			left: 0.25em;
-		}
-		&::after{
-			@include clearfix();
-		}
-	}
-	input[type="text"],
-	select {
-		@extend .form-control;
-	}
+$form-filters-width: $sidebar-width !default;
+
+form.filters{
+	width: $form-filters-width;
 }
