--- a/src/main/webapp/common/variables.scss
+++ b/src/main/webapp/common/variables.scss
@@ -28,6 +28,7 @@ $background-color: $white;
 $background-color-alt: #f0f0f0;
 $background-color-dark: $dark-gray;
 $background-color-danger: lighten($brand-danger, 45);
+$background-color-success: lighten($brand-success, 45);
 
 $text-color: #434343;
 $text-color-disabled: #767676;
