--- a/src/main/webapp/common/icon.mixins.scss
+++ b/src/main/webapp/common/icon.mixins.scss
@@ -1,9 +1,8 @@
 @mixin icon($icon){
-  @extend .fa;
   @extend ".fa-#{$icon} !optional";
   font-family: $font-family;
   &::before{
-    font-family: "FontAwesome";
+    font: normal normal normal 14px/1 FontAwesome;
     display: inline-block;
     font-size: 1em;
   }
