OLMIS-1807: Standardized border colors

--- a/src/main/webapp/common/aside.scss
+++ b/src/main/webapp/common/aside.scss
@@ -5,7 +5,7 @@
   padding: 1em;
 
   background-color: $background-color-alt;
-  border: 1px solid $light-gray;
+  border: 1px solid $border-color;
 
   > button.close {
     position: absolute;
