--- a/src/main/webapp/common/variables.scss
+++ b/src/main/webapp/common/variables.scss
@@ -27,20 +27,17 @@ $brand-info: $blue;
 $background-color: $white;
 $background-color-alt: #f0f0f0;
 $background-color-dark: $dark-gray;
-$background-color-danger: lighten($brand-danger, 45);
+$background-color-danger: #FFEFF0;
 $background-color-success: lighten($brand-success, 45);
 
-$text-color: #434343;
-$text-color-disabled: #767676;
-
-$heading-color: $text-color;
+$text-color: $dark-gray;
+$text-color-disabled: lighten($dark-gray, 15);
 
 $link-color: $blue;
 $link-color-hover: darken($link-color, 15);
 
-$border-color: $light-gray;
-
-$icon-font-path: 'fonts/';
+$border-color: darken($light-gray, 15);
+$input-border: $border-color;
 
 $text-shadow-size: 5px;
 
