OLMIS-1807: Adjusted border colors

--- a/src/main/webapp/common/variables.scss
+++ b/src/main/webapp/common/variables.scss
@@ -20,6 +20,7 @@ $font-size-large: 22px;
 $font-size-extra-large: 36px;
 
 $brand-primary: $brand-blue;
+$brand-accent: $orange;
 $brand-danger: $red;
 $brand-success: $green;
 $brand-info: $blue;
