--- a/src/main/webapp/common/aside.scss
+++ b/src/main/webapp/common/aside.scss
@@ -6,6 +6,7 @@
 
   background-color: $background-color-alt;
   border: 1px solid $border-color;
+  border-radius: $border-radius;
 
   > button.close {
     position: absolute;
