--- a/src/main/webapp/common/variables.scss
+++ b/src/main/webapp/common/variables.scss
@@ -28,8 +28,8 @@ $brand-info: $blue;
 $background-color: $white;
 $background-color-alt: #f0f0f0;
 $background-color-dark: $dark-gray;
-$background-color-danger: #FFEFF0;
-$background-color-success: lighten($brand-success, 45);
+$background-color-danger: #f1eaeb;
+$background-color-success: #caebec;
 
 $text-color: $dark-gray;
 $text-color-disabled: lighten($dark-gray, 15);
