--- a/styleguide/index.hbs
+++ b/styleguide/index.hbs
@@ -16,11 +16,8 @@
 </head>
 <body ng-app="openlmis">
   <header>
-    <div>
-      <div class="logo">
-        <img src="images/logo.png" />
-        <h1>{{options.title}}</h1>
-      </div>
+    <div class="openlmis-header">
+        <h1 class="title">{{options.title}}</h1>
     </div>
     <nav class="navbar">
       <ul class="nav navbar-nav">
@@ -37,9 +34,14 @@
             <em>{{referenceNumber}}</em> {{header}}
           </a>
           <ul class="dropdown-menu">
+          <li>
+              <a href="section-{{referenceURI}}.html">
+                Overview
+              </a>
+          </li>  
           {{#each children}}
-            <li class="kss-nav__menu-item">
-              <a class="kss-nav__menu-link" href="section-{{../referenceURI}}.html#kssref-{{referenceURI}}">
+            <li>
+              <a href="section-{{../referenceURI}}.html#kssref-{{referenceURI}}">
                 <em>{{referenceNumber}}</em> {{header}}
               </a>
           </li>
@@ -47,7 +49,7 @@
           </ul>
         </li>
         {{else}}
-        <li class="">
+        <li >
           <a href="section-{{referenceURI}}.html">
             <em>{{referenceNumber}}</em> {{header}}
           </a>
@@ -59,9 +61,9 @@
   </header>
 <article role="main" class="page">
 {{#if homepage}}
-  <div id="kssref-0" class="kss-section kss-section--depth-0 kss-overview kss-style">
+  <section id="kssref-0">
     {{{homepage}}}
-  </div>
+  </section>
 {{else}}
 
   {{!
@@ -72,8 +74,6 @@
   }}
   {{#each sections}}
     <{{#if @first}}div{{else}}section{{/if}} id="kssref-{{referenceURI}}">
-
-      <div>
         <h{{depth}} >
           <a href="#kssref-{{referenceURI}}">
             <em>{{referenceNumber}}</em>
@@ -105,39 +105,38 @@
           {{/each}}
           </ul>
         {{/if}}
-      </div>
 
       {{#if example}}
-        <div class="kss-modifier__wrapper">
-          <div class="kss-modifier__heading kss-style">
-            Example{{#if modifiers}}s{{/if}}
-          </div>
+        <section bs-tabs bs-active-tab="Example">
+          <div bs-pane data-title="Example" name="Example">
+            {{#if modifiers}}
+              <div class="kss-modifier__default-name kss-style">
+                Default styling
+              </div>
+            {{/if}}
 
-          {{#if modifiers}}
-            <div class="kss-modifier__default-name kss-style">
-              Default styling
-            </div>
-          {{/if}}
-
-          <div class="kss-modifier__example">
-            {{{example}}}
-          </div>
-
-          {{#each modifiers}}
-            <div class="kss-modifier__name kss-style">
-              {{name}}
-            </div>
-            <div class="kss-modifier__description kss-style">
-              {{{description}}}
-            </div>
             <div class="kss-modifier__example">
-              {{{markup}}}
+              {{{example}}}
             </div>
-          {{/each}}
-        </div>
-        {{#if example}}
-          <pre class="prettyprint linenums lang-html"><code data-language="html">{{markup}}</code></pre>
-        {{/if}}
+
+            {{#each modifiers}}
+              <div class="kss-modifier__name kss-style">
+                {{name}}
+              </div>
+              <div class="kss-modifier__description kss-style">
+                {{{description}}}
+              </div>
+              <div class="kss-modifier__example">
+                {{{markup}}}
+              </div>
+            {{/each}}
+          </div>
+          {{#if example}}
+          <div bs-pane data-title="HTML" name="HTML">
+           <pre class="prettyprint linenums lang-html"><code data-language="html">{{markup}}</code></pre>
+          </div>
+          {{/if}}
+        </section>
       {{/if}}
 
       {{#if sourceFile.name}}
