--- a/src/main/webapp/openlmis-table/openlmis-table-container.scss
+++ b/src/main/webapp/openlmis-table/openlmis-table-container.scss
@@ -103,7 +103,7 @@ the current table sort order is recommended.*
       </tr>
     </tbody>
   </table>
-  <openlmis-pagination ng-model="foo" total-items="100" page-size="20"></openlmis-pagination
+  <openlmis-pagination ng-model="foo" total-items="100" page-size="20"></openlmis-pagination>
 </section>
 
 Styleguide 4.1
