OLMIS-1998: Fixed issues in the Manage POD screen
* Added indication are products full supply or non-full supply
* Updated "received in" to "received date"
* Fixed calendar date picker missing glyphicon arrows

--- a/src/main/webapp/openlmis-form/datepicker.scss
+++ b/src/main/webapp/openlmis-form/datepicker.scss
@@ -23,3 +23,13 @@
 		}
 	}
 }
+
+.glyphicon {
+	@extend .fa;
+	&.glyphicon-chevron-right {
+		@extend .fa-chevron-right;
+	}
+	&.glyphicon-chevron-left {
+		@extend .fa-chevron-left;
+	}
+}
