OLMIS-1999: restored markup and styles to all asides other than requisition and POD header

--- a/src/main/webapp/admin-template/template.scss
+++ b/src/main/webapp/admin-template/template.scss
@@ -1,5 +1,10 @@
 .requisition-template-admin {
 
+	dl {
+		padding-top: 1.5em !important;
+	    padding-bottom: 0.5em !important;
+	}
+
 	.page {
 		overflow: hidden;
 
