--- a/src/main/webapp/proof-of-delivery-view/proof-of-delivery-view.scss
+++ b/src/main/webapp/proof-of-delivery-view/proof-of-delivery-view.scss
@@ -1,3 +1,7 @@
+.pod-info {
+    @extend .requisition-info;
+}
+
 .pod-regular {
     @extend .requisition-type;
     @extend .requisition-type.regular;
@@ -5,5 +9,10 @@
 
 .pod-emergency {
     @extend .requisition-type;
-	@extend .requisition-type.emergency;
+    @extend .requisition-type.emergency;
+}
+
+.pod-footer dl {
+    padding-top: 1.5em !important;
+    padding-bottom: 0.5em !important;
 }
