OLMIS-1999: fixed class name on view POD screen

--- a/src/main/webapp/proof-of-delivery-view/proof-of-delivery-view.scss
+++ b/src/main/webapp/proof-of-delivery-view/proof-of-delivery-view.scss
@@ -2,6 +2,10 @@
     @extend .requisition-info;
 }
 
+.pod-details {
+    @extend .requisition-details;
+}
+
 .pod-regular {
     @extend .requisition-type;
     @extend .requisition-type.regular;
