OLMIS-1999: refactored requisition header to use ul instead of divs

--- a/src/main/webapp/common/aside.scss
+++ b/src/main/webapp/common/aside.scss
@@ -14,7 +14,8 @@
         display: flex;
         margin: 0em;
         flex-grow: 1;
-        padding: 1em;
+        padding: 1.5em;
+        padding-bottom: 0.5em;
     }
 
     dt {
