--- a/src/main/webapp/requisition-view/header.scss
+++ b/src/main/webapp/requisition-view/header.scss
@@ -3,6 +3,25 @@
     display: flex;
     align-items: stretch;
     padding: $padding2px;
+
+    ul {
+
+        padding: 1em;
+        display: flex;
+        flex-wrap: wrap;
+        margin-top: 0.5em;
+
+        li {
+            display: flex;
+            flex-direction: column;
+            padding-right: 2em;
+            padding-bottom: 0.2em;
+        }
+
+        strong {
+            white-space: nowrap;
+        }
+    }
 }
 
 .requisition-type {
@@ -20,27 +39,5 @@
     &.emergency {
         background-color: $brand-danger;
         color: $white;
-    }
-}
-
-.requisition-details {
-
-    display: flex;
-    flex-wrap: wrap;
-    flex-grow: 1;
-    justify-content: space-between;
-    margin-left: 1em;
-    margin-top: 0.5em;
-    float: left;
-
-    div {
-        padding-right: 1em;
-        padding-bottom: 0.2em;
-    }
-
-    strong {
-        width: 0;
-        top: -1.2em;
-        white-space: nowrap;
     }
 }
