OLMIS-2057: fixed input background color for pinned rows on template screen

--- a/src/admin-template/template.scss
+++ b/src/admin-template/template.scss
@@ -30,7 +30,12 @@
 			}
 
 			.pinned > td {
-				background-color: lighten($gray, 35);
+
+				background-color: $light-gray;
+
+				input {
+					background-color: $light-gray !important;
+				}
 			}
 
 			.error {
