OLMIS-2057: changed type of gray for pinned columns background

--- a/src/admin-template/template.scss
+++ b/src/admin-template/template.scss
@@ -31,10 +31,10 @@
 
 			.pinned > td {
 
-				background-color: $light-gray;
+				background-color: lighten($gray, 35%);
 
 				input {
-					background-color: $light-gray !important;
+					background-color: lighten($gray, 35%) !important;
 				}
 			}
 
